--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -1,6 +1,9 @@
 /* Cards */
 .mdc-card {
   background: $white;
+  -webkit-box-shadow: 0 1px 6px -1px rgba(0,0,0,0.15);
+  -moz-box-shadow: 0 1px 6px -1px rgba(0,0,0,0.15);
+  box-shadow: 0 1px 6px -1px rgba(0,0,0,0.15);
 }
 
 .card--with-avatar {
