--- a/scss/style.scss
+++ b/scss/style.scss
@@ -35,6 +35,7 @@
 /* === Core Styles === */
 @import "demo";
 @import "fonts";
+@import "footer";
 @import "navbar";
 @import "sidebar";
 @import "template";
