--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,19 +1,37 @@
 /* Navbar */
 
-.mdc-persistent-drawer--open {
-	+ .mdc-toolbar {
+.mdc-toolbar {
+	&.mdc-toolbar--fixed{
 		left: auto;
 		right: 0;
-		width: calc(100% - #{$mdc-persistent-drawer-custom-width});		
+		@include transition-duration(0.2s);
+		transition-property: width;
+	}
+	.material-icons{
+		color: $white;
+	}
+}
+.mdc-persistent-drawer--open {
+	+ .mdc-toolbar {
+		width: calc(100% - #{$mdc-persistent-drawer-custom-width});
+		@include transition-duration(0.3s);
+		transition-property: width, transform;
+		&.mdc-toolbar--fixed{
+			-webkit-box-shadow: 6px 6px 13px 0px rgba(0, 0, 0, 0.19);
+			-moz-box-shadow: 6px 6px 13px 0px rgba(0, 0, 0, 0.19);
+			box-shadow: 6px 6px 13px 0px rgba(0, 0, 0, 0.19);
+		}
 	}
 }
 .mdc-toolbar__section {
 	@include align-items(center);
 	.mdc-toolbar__input {
 		margin-left: 2rem;
-		padding: 1rem 0;
+		padding: 0;
+		width: 100%;
 		.mdc-text-field {
 			margin-bottom: 0;
+			width: 100%;
 			&__input {
 				padding-bottom: 0;
 				font-size: .875rem;
@@ -23,6 +41,13 @@
 			}
 			&:not(.mdc-text-field--upgraded):not(.mdc-text-field--textarea) .mdc-text-field__input {
 				border-bottom: 0;
+				height: 30px;
+				background: darken($mdc-theme-primary,5%);
+				padding: 5px 20px;
+				@include border-radius(3px);
+				font-weight: 400;
+				font-size: 13px;
+				color: $white;
 			}
 		}
 	}
@@ -42,6 +67,7 @@
 			text-align: center;
 			background: $mdc-theme-secondary;
 			font-weight: 500;
+			color: $white;
 		}
 	}
 	.mdc-simple-menu {
