--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@
   --mdc-ripple-fg-scale: 1;
   --mdc-ripple-fg-translate-end: 0;
   --mdc-ripple-fg-translate-start: 0;
-  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   display: inline-block;
   position: relative;
   box-sizing: border-box;
@@ -188,7 +188,7 @@
     transition-duration: 75ms;
     opacity: 0.32; }
   .mdc-button.mdc-ripple-upgraded {
-    --mdc-ripple-fg-opacity: 0.32; }
+    --mdc-ripple-fg-opacity: $opacity; }
 
 .mdc-button--raised:disabled,
 .mdc-button--unelevated:disabled {
@@ -253,7 +253,7 @@
 
 .mdc-button--raised.mdc-ripple-upgraded,
 .mdc-button--unelevated.mdc-ripple-upgraded {
-  --mdc-ripple-fg-opacity: 0.16; }
+  --mdc-ripple-fg-opacity: $opacity; }
 
 .mdc-button--raised {
   box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
@@ -895,7 +895,7 @@
   --mdc-ripple-fg-scale: 1;
   --mdc-ripple-fg-translate-end: 0;
   --mdc-ripple-fg-translate-start: 0;
-  -webkit-tap-highlight-color: transparent; }
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
   .mdc-checkbox .mdc-checkbox__native-control:disabled:not(:checked):not(:indeterminate) ~ .mdc-checkbox__background {
     border-color: rgba(0, 0, 0, 0.26); }
   .mdc-checkbox .mdc-checkbox__native-control:disabled:checked ~ .mdc-checkbox__background,
@@ -959,7 +959,7 @@
     transition-duration: 75ms;
     opacity: 0.16; }
   .mdc-checkbox.mdc-ripple-upgraded {
-    --mdc-ripple-fg-opacity: 0.16; }
+    --mdc-ripple-fg-opacity: $opacity; }
   .mdc-checkbox::before, .mdc-checkbox::after {
     top: calc(50% - 50%);
     left: calc(50% - 50%);
@@ -2990,7 +2990,7 @@
   --mdc-ripple-fg-scale: 1;
   --mdc-ripple-fg-translate-end: 0;
   --mdc-ripple-fg-translate-start: 0;
-  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2), 0px 6px 10px 0px rgba(0, 0, 0, 0.14), 0px 1px 18px 0px rgba(0, 0, 0, 0.12);
   display: inline-flex;
   position: relative;
@@ -3088,7 +3088,7 @@
     transition-duration: 75ms;
     opacity: 0.32; }
   .mdc-fab.mdc-ripple-upgraded {
-    --mdc-ripple-fg-opacity: 0.32; }
+    --mdc-ripple-fg-opacity: $opacity; }
 
 .mdc-fab--mini {
   width: 40px;
@@ -3622,7 +3622,7 @@
   --mdc-ripple-fg-scale: 1;
   --mdc-ripple-fg-translate-end: 0;
   --mdc-ripple-fg-translate-start: 0;
-  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   display: flex;
   position: relative;
   align-items: center;
@@ -3691,7 +3691,7 @@
     transition-duration: 75ms;
     opacity: 0.16; }
   .mdc-icon-toggle.mdc-ripple-upgraded {
-    --mdc-ripple-fg-opacity: 0.16; }
+    --mdc-ripple-fg-opacity: $opacity; }
   .mdc-icon-toggle--theme-dark.mdc-icon-toggle::before, .mdc-icon-toggle--theme-dark.mdc-icon-toggle::after,
   .mdc-theme--dark .mdc-icon-toggle::before,
   .mdc-theme--dark .mdc-icon-toggle::after {
@@ -3713,7 +3713,7 @@
     opacity: 0.32; }
   .mdc-icon-toggle--theme-dark.mdc-icon-toggle.mdc-ripple-upgraded,
   .mdc-theme--dark .mdc-icon-toggle.mdc-ripple-upgraded {
-    --mdc-ripple-fg-opacity: 0.32; }
+    --mdc-ripple-fg-opacity: $opacity; }
   .mdc-icon-toggle::after {
     position: absolute;
     border-radius: 50%;
@@ -3747,7 +3747,7 @@
     transition-duration: 75ms;
     opacity: 0.32; }
   .mdc-icon-toggle--primary.mdc-ripple-upgraded {
-    --mdc-ripple-fg-opacity: 0.32; }
+    --mdc-ripple-fg-opacity: $opacity; }
 
 .mdc-icon-toggle--accent {
   /* @alternate */
@@ -3770,7 +3770,7 @@
     transition-duration: 75ms;
     opacity: 0.16; }
   .mdc-icon-toggle--accent.mdc-ripple-upgraded {
-    --mdc-ripple-fg-opacity: 0.16; }
+    --mdc-ripple-fg-opacity: $opacity; }
 
 .mdc-icon-toggle--disabled {
   /* @alternate */
@@ -4945,7 +4945,7 @@ a.mdc-list-item {
   --mdc-ripple-fg-scale: 1;
   --mdc-ripple-fg-translate-end: 0;
   --mdc-ripple-fg-translate-start: 0;
-  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   left: -16px;
   right: initial;
   position: relative;
@@ -5247,7 +5247,7 @@ a.mdc-list-item {
   --mdc-ripple-fg-scale: 1;
   --mdc-ripple-fg-translate-end: 0;
   --mdc-ripple-fg-translate-start: 0;
-  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   display: inline-block;
   position: relative;
   flex: 0 0 auto;
@@ -5339,7 +5339,7 @@ a.mdc-list-item {
     transition-duration: 75ms;
     opacity: 0.16; }
   .mdc-radio.mdc-ripple-upgraded {
-    --mdc-ripple-fg-opacity: 0.16; }
+    --mdc-ripple-fg-opacity: $opacity; }
   .mdc-radio.mdc-ripple-upgraded .mdc-radio__background::before {
     content: none; }
   .mdc-radio__background {
@@ -5446,7 +5446,7 @@ a.mdc-list-item {
   --mdc-ripple-fg-scale: 1;
   --mdc-ripple-fg-translate-end: 0;
   --mdc-ripple-fg-translate-start: 0;
-  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   position: relative;
   outline: none;
   overflow: hidden; }
@@ -5485,7 +5485,7 @@ a.mdc-list-item {
     transition-duration: 75ms;
     opacity: 0.16; }
   .mdc-ripple-surface.mdc-ripple-upgraded {
-    --mdc-ripple-fg-opacity: 0.16; }
+    --mdc-ripple-fg-opacity: $opacity; }
   .mdc-ripple-surface::before, .mdc-ripple-surface::after {
     top: calc(50% - 100%);
     left: calc(50% - 100%);
@@ -5525,7 +5525,7 @@ a.mdc-list-item {
     transition-duration: 75ms;
     opacity: 0.32; }
   .mdc-ripple-surface--primary.mdc-ripple-upgraded {
-    --mdc-ripple-fg-opacity: 0.32; }
+    --mdc-ripple-fg-opacity: $opacity; }
   .mdc-ripple-surface--accent::before, .mdc-ripple-surface--accent::after {
     /* @alternate */
     background-color: #e52d27; }
@@ -5543,7 +5543,7 @@ a.mdc-list-item {
     transition-duration: 75ms;
     opacity: 0.16; }
   .mdc-ripple-surface--accent.mdc-ripple-upgraded {
-    --mdc-ripple-fg-opacity: 0.16; }
+    --mdc-ripple-fg-opacity: $opacity; }
 
 /* TODO(sgomes): Figure out what to do about desktop font sizes. */
 /* TODO(sgomes): Figure out what to do about i18n and i18n font sizes. */
@@ -5766,7 +5766,7 @@ a.mdc-list-item {
     --mdc-ripple-fg-scale: 1;
     --mdc-ripple-fg-translate-end: 0;
     --mdc-ripple-fg-translate-start: 0;
-    -webkit-tap-highlight-color: transparent;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     display: flex;
     position: relative;
     flex-grow: 1;
@@ -5837,7 +5837,7 @@ a.mdc-list-item {
       transition-duration: 75ms;
       opacity: 0.16; }
     .mdc-select__surface.mdc-ripple-upgraded {
-      --mdc-ripple-fg-opacity: 0.16; }
+      --mdc-ripple-fg-opacity: $opacity; }
     .mdc-select--theme-dark .mdc-select__surface::before, .mdc-select--theme-dark .mdc-select__surface::after,
     .mdc-theme--dark .mdc-select__surface::before,
     .mdc-theme--dark .mdc-select__surface::after {
@@ -5859,7 +5859,7 @@ a.mdc-list-item {
       opacity: 0.32; }
     .mdc-select--theme-dark .mdc-select__surface.mdc-ripple-upgraded,
     .mdc-theme--dark .mdc-select__surface.mdc-ripple-upgraded {
-      --mdc-ripple-fg-opacity: 0.32; }
+      --mdc-ripple-fg-opacity: $opacity; }
     .mdc-select__surface::-ms-expand {
       display: none; }
   .mdc-select__label {
@@ -6269,7 +6269,7 @@ a.mdc-list-item {
   height: 48px;
   cursor: pointer;
   touch-action: pan-x;
-  -webkit-tap-highlight-color: transparent; }
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
   .mdc-slider:not(.mdc-slider--disabled) .mdc-slider__track {
     /* @alternate */
     background-color: #e52d27;
@@ -7199,7 +7199,7 @@ a.mdc-list-item {
   --mdc-ripple-fg-scale: 1;
   --mdc-ripple-fg-translate-end: 0;
   --mdc-ripple-fg-translate-start: 0;
-  -webkit-tap-highlight-color: transparent; }
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
   .mdc-tab.mdc-ripple-upgraded::before, .mdc-tab.mdc-ripple-upgraded::after {
     position: absolute;
     border-radius: 50%;
@@ -7235,7 +7235,7 @@ a.mdc-list-item {
     transition-duration: 75ms;
     opacity: 0.16; }
   .mdc-tab.mdc-ripple-upgraded.mdc-ripple-upgraded {
-    --mdc-ripple-fg-opacity: 0.16; }
+    --mdc-ripple-fg-opacity: $opacity; }
   .mdc-tab.mdc-ripple-upgraded::before, .mdc-tab.mdc-ripple-upgraded::after {
     top: calc(50% - 100%);
     left: calc(50% - 100%);
@@ -7283,7 +7283,7 @@ a.mdc-list-item {
     opacity: 0.32; }
   .mdc-tab-bar--theme-dark .mdc-tab.mdc-ripple-upgraded.mdc-ripple-upgraded,
   .mdc-theme--dark .mdc-tab.mdc-ripple-upgraded.mdc-ripple-upgraded {
-    --mdc-ripple-fg-opacity: 0.32; }
+    --mdc-ripple-fg-opacity: $opacity; }
   .mdc-toolbar .mdc-tab.mdc-ripple-upgraded::before, .mdc-toolbar .mdc-tab.mdc-ripple-upgraded::after {
     /* @alternate */
     background-color: rgba(0, 0, 0, 0.87); }
@@ -7301,7 +7301,7 @@ a.mdc-list-item {
     transition-duration: 75ms;
     opacity: 0.16; }
   .mdc-toolbar .mdc-tab.mdc-ripple-upgraded.mdc-ripple-upgraded {
-    --mdc-ripple-fg-opacity: 0.16; }
+    --mdc-ripple-fg-opacity: $opacity; }
   .mdc-tab.mdc-ripple-upgraded:focus {
     outline: none; }
 
@@ -8069,7 +8069,7 @@ a.mdc-list-item {
   --mdc-ripple-fg-scale: 1;
   --mdc-ripple-fg-translate-end: 0;
   --mdc-ripple-fg-translate-start: 0;
-  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   border-radius: 4px 4px 0 0;
   display: inline-flex;
   position: relative;
@@ -8115,7 +8115,7 @@ a.mdc-list-item {
     transition-duration: 75ms;
     opacity: 0.16; }
   .mdc-text-field--box.mdc-ripple-upgraded {
-    --mdc-ripple-fg-opacity: 0.16; }
+    --mdc-ripple-fg-opacity: $opacity; }
   .mdc-text-field--box::before, .mdc-text-field--box::after {
     top: calc(50% - 100%);
     left: calc(50% - 100%);
@@ -8167,7 +8167,7 @@ a.mdc-list-item {
     opacity: 0.32; }
   .mdc-text-field--theme-dark.mdc-text-field--box.mdc-ripple-upgraded,
   .mdc-theme--dark .mdc-text-field--box.mdc-ripple-upgraded {
-    --mdc-ripple-fg-opacity: 0.32; }
+    --mdc-ripple-fg-opacity: $opacity; }
   .mdc-text-field--box .mdc-text-field__input {
     align-self: flex-end;
     box-sizing: border-box;
@@ -17498,7 +17498,7 @@ address p {
   opacity: 0.16; }
 
 .mdc-button.secondary-text-button.mdc-ripple-upgraded {
-  --mdc-ripple-fg-opacity: 0.16; }
+  --mdc-ripple-fg-opacity: $opacity; }
 
 .mdc-button--theme-dark .mdc-button.secondary-text-button:not(:disabled),
 .mdc-theme--dark .mdc-button.secondary-text-button:not(:disabled) {
@@ -17536,7 +17536,7 @@ address p {
 
 .mdc-button--theme-dark .mdc-button.secondary-text-button.mdc-ripple-upgraded,
 .mdc-theme--dark .mdc-button.secondary-text-button.mdc-ripple-upgraded {
-  --mdc-ripple-fg-opacity: 0.16; }
+  --mdc-ripple-fg-opacity: $opacity; }
 
 .mdc-button.secondary-filled-button:not(:disabled) {
   background-color: #e52d27; }
@@ -17568,7 +17568,7 @@ address p {
   opacity: 0.32; }
 
 .mdc-button.secondary-filled-button.mdc-ripple-upgraded {
-  --mdc-ripple-fg-opacity: 0.32; }
+  --mdc-ripple-fg-opacity: $opacity; }
 
 .mdc-button--theme-dark .mdc-button.secondary-filled-button:not(:disabled),
 .mdc-theme--dark .mdc-button.secondary-filled-button:not(:disabled) {
@@ -17612,7 +17612,7 @@ address p {
 
 .mdc-button--theme-dark .mdc-button.secondary-filled-button.mdc-ripple-upgraded,
 .mdc-theme--dark .mdc-button.secondary-filled-button.mdc-ripple-upgraded {
-  --mdc-ripple-fg-opacity: 0.32; }
+  --mdc-ripple-fg-opacity: $opacity; }
 
 .mdc-button.secondary-stroked-button:not(:disabled) {
   color: #e52d27; }
@@ -17642,7 +17642,7 @@ address p {
   opacity: 0.16; }
 
 .mdc-button.secondary-stroked-button.mdc-ripple-upgraded {
-  --mdc-ripple-fg-opacity: 0.16; }
+  --mdc-ripple-fg-opacity: $opacity; }
 
 .mdc-button--theme-dark .mdc-button.secondary-stroked-button:not(:disabled),
 .mdc-theme--dark .mdc-button.secondary-stroked-button:not(:disabled) {
@@ -17684,7 +17684,7 @@ address p {
 
 .mdc-button--theme-dark .mdc-button.secondary-stroked-button.mdc-ripple-upgraded,
 .mdc-theme--dark .mdc-button.secondary-stroked-button.mdc-ripple-upgraded {
-  --mdc-ripple-fg-opacity: 0.16; }
+  --mdc-ripple-fg-opacity: $opacity; }
 
 .mdc-button .mdc-button__icon {
   line-height: 33px; }
