--- a/template/demo/index.html
+++ b/template/demo/index.html
@@ -616,21 +616,17 @@
         </main>
         <!-- partial:partials/_footer.html -->
         <footer>
-          <div class="mdc-layout-grid">
-            <div class="mdc-layout-grid__inner">
-              <div class="mdc-layout-grid__cell stretch-card mdc-layout-grid__cell--span-6-desktop">
-                <span class="tx-14">Copyright © 2019 <a href="https://www.bootstrapdash.com/" target="_blank">BootstrapDash</a>. All rights reserved.</span>
-              </div>
-              <div class="mdc-layout-grid__cell stretch-card mdc-layout-grid__cell--span-6-desktop d-flex justify-content-end">
-                <div class="d-flex align-items-center">
-                  <a href="">Documentation</a>
-                  <span class="vertical-divider"></span>
-                  <a href="">FAQ</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </footer>
+  <div class="mdc-layout-grid">
+    <div class="mdc-layout-grid__inner">
+      <div class="mdc-layout-grid__cell stretch-card mdc-layout-grid__cell--span-6-desktop">
+        <span class="text-center text-sm-left d-block d-sm-inline-block tx-14">Copyright © <a href="https://www.bootstrapdash.com/" target="_blank">bootstrapdash.com </a>2020</span>
+      </div>
+      <div class="mdc-layout-grid__cell stretch-card mdc-layout-grid__cell--span-6-desktop d-flex justify-content-end">
+        <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center tx-14">Free <a href="https://www.bootstrapdash.com/material-design-dashboard/" target="_blank"> material admin </a> dashboards from <a href="https://www.bootstrapdash.com/" target="_blank">Bootstrapdash.com </a></span>
+      </div>
+    </div>
+  </div>
+</footer>
         <!-- partial -->
       </div>
     </div>
